2018-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.1

	* inst/COPYRIGHTS (Copyright): Added two entries [CRAN request]
	* inst/AUTHORS: Also added here

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/rcppmsgpack_c_functions.cpp (c_timestamp_encode): Make
	Windows happy and use uint32_t here as well

	* inst/include/msgpack/v1/adaptor/array_ref.hpp (msgpack): Do not
	use #pragma to silence compiler as this makes CRAN very unhappy
        * inst/include/msgpack/v1/adaptor/boost/optional.hpp: Idem
        * inst/include/msgpack/v1/adaptor/map.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector_char.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector_unsigned_char.hpp: Idem
        * inst/include/msgpack/v2/x3_parse.hpp: Idem

2018-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tests.r: Use all.equal for comparison of packed & unpacked
	timestamp as timestamp resolution not as fine as identical

	* src/rcppmsgpack_c_functions.cpp: Use unsigned int to suppress
	some signed/unsigned warnings; more explicit parentheses as well

2018-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tests.r: Make microbenchmark use conditional as the
	package is in Suggests:

2017-09-30  Travers Ching  <traversc@gmail.com>

	* README.md: Updated

2017-09-29  Travers Ching  <traversc@gmail.com>

	* R/functions.R: Added MsgPack timestamp and NA handling
	* R/RcppExports.R: Idem
	* man/msgpack_timestamp_decode.Rd: Idem
	* man/msgpack_timestamp_encode.Rd: Idem
	* src/anyvector.h: Idem
	* src/anyvector.cpp: Idem
	* src/rcppmsgpack_c_functions.cpp: Idem
	* src/RcppExports.cpp: Idem
	* tests/tests.R: Idem

2017-09-22  Travers Ching  <traversc@gmail.com>

	* src/anyvector.h: Update unpack function
	* sec/anyvector.cpp: Idem
	* src/rcppmsgpack_c_functions.cpp: Idem
	* tests/tests.R: Idem

2017-09-18  Travers Ching  <traversc@gmail.com>
