@@ -1,16 +1,16 @@
-d73f45f008e00410fd8c89b55147029c *ChangeLog
-69f983618a006bf7876df2328e28605e *DESCRIPTION
+4f1d4863543c3bd4690d8452569610ac *ChangeLog
+927d649f4887c404d0e15fd11dd3fabc *DESCRIPTION
 bc4fca5809740759b77008a7c0a0b482 *NAMESPACE
 806122f93aff7a26530baec1792b457e *R/RcppExports.R
 e0058dcd5bebe9a9e39ca71eaf059d16 *R/functions.r
-98a0c7d3b820480edd86dc86a5aa5b16 *README.md
-32c0b6a42537e1b869268236edce5868 *build/partial.rdb
-601c63a423f102984a5b2b8ea9484c78 *build/vignette.rds
+c634bd5152ca23f5e59be60447ca924a *README.md
+70be8d2b033cb289a599aaea2478c083 *build/partial.rdb
+6752f9e027d2704efd66cc37875f41bf *build/vignette.rds
 7954f360624c8d2662904bfec61fc3bd *inst/AUTHORS
 264cffb01ff83fd8ff84c28b17873239 *inst/COPYRIGHTS
-be89a537fe73a3fec8d4ecc0ca264a97 *inst/NEWS.Rd
+4f51c4ad52b8dc40eca38ee573b507a0 *inst/NEWS.Rd
 729af980bcd9a0c17f8706c87ca7eeb4 *inst/doc/vignette.R
-020156c4a1feca6965abc978261d1508 *inst/doc/vignette.html
+5638f1c1dd94b3f5927c6107746cbd3f *inst/doc/vignette.html
 0fc8bfee390339821b29d608b953a138 *inst/doc/vignette.rmd
 770c52f2a5427755203a4f4dbbe0fb1d *inst/include/msgpack.h
 52eca7b2082b8da339b203169a75ae1e *inst/include/msgpack.hpp
@@ -586,7 +586,7 @@ af04c716aaf3c2152ac3c0b2955e0e03 *inst/include/msgpack/v1/fbuffer_decl.hpp
 45c54fe2006f23cd8bc512297f40c9e5 *inst/include/msgpack/v1/iterator_decl.hpp
 b9eac51ba7ab267bb9de6a9f04508e04 *inst/include/msgpack/v1/meta.hpp
 f59ba709b280e53d2138bc5986d4d9cf *inst/include/msgpack/v1/meta_decl.hpp
-b1c9219059e226516377d9e99bcad6fe *inst/include/msgpack/v1/object.hpp
+d86a5ace61aead2acde33c8c7a450063 *inst/include/msgpack/v1/object.hpp
 0ddfc60a7d409c4da32bd8b0b5d8da0f *inst/include/msgpack/v1/object_decl.hpp
 007305353c21a209ac8e44a7bafde6dc *inst/include/msgpack/v1/object_fwd.hpp
 9d7f997a1b65118d24c9cdd948323685 *inst/include/msgpack/v1/object_fwd_decl.hpp
